--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,23 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-analytics'
+
+//Otp PinView
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
+
+//Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+//To Pick Image
+//    implementation 'com.karumi:dexter:6.2.1'
+
 }
