--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.hardy.chatappfirebase">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatAppFirebase"
         android:usesCleartextTraffic="true">
-        <activity android:name=".OtpActivity"></activity>
+        <activity android:name=".SetupProfileActivity"></activity>
+        <activity android:name=".OtpActivity" />
         <activity
             android:name=".PhoneNumberAuth"
             android:windowSoftInputMode="stateVisible">
@@ -22,10 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-
-        <activity android:name=".SplashScreen">
-
-        </activity>
+        <activity android:name=".SplashScreen"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
